# File_Explorer

./: CMakeLists.txt  command_exec.cpp  command_exec.h  command_mode.cpp  command_mode.h  copy_dir.cpp  copy_dir.h  delete_dir.cpp  delete_dir.h  file_copy.cpp  file_copy.h  file_explorer  file_explorer.cpp  global_variables.cpp  global_variables.h  list_directory.cpp  list_directory.h  makefile  out.txt  out1.txt  raw_input.cpp  raw_input.h  readme-OS_ASIGNMENT_1.txt  readme.md  tempnew11.txt
temp/: file_copy.cpp  for2.sh  wt.wt
